# wish-c99

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  LICENSES  Makefile.linux  Makefile.osx  README  README.md  TODO  app.mk  linux-arm-static-library.mk  linux-static-library.mk  make-esp.mk  make-linux-arm.mk  make-linux.mk  make-osx.mk  mist-api-app.mk  mist_c99
apps/chat/: wish_app_chat.c  wish_app_chat.h
apps/mist-api/: mist_api.c  mist_api.h  sandbox.c  sandbox.h  version.h  wish_app_mist_example.c
apps/mist-config/: mist_config.c  mist_config.h
apps/mist-esp8266-evb-app/: mist_esp8266_evb_app.c  mist_esp8266_evb_app.h
apps/mist-esp8266-sonoff-app/: mist_esp8266_sonoff_app.c  mist_esp8266_sonoff_app.h
apps/mist-example/: example_hardware.c  example_hardware.h  wish_app_mist_example.c  wish_app_mist_example.h
apps/mist-modbus/: README  hardware.c  wish_app_mist_modbus.c  wish_app_mist_modbus.h
apps/mist-modbus/mbmaster/: VERSION
apps/mist-modbus/mbmaster_port/: mbportserial.c
apps/mist-standalone/: README  example_hardware.c  example_hardware.h  wish_app_mist_example.c  wish_app_mist_example.h
doc/: ESP8266-complaints-and-grievances  IMPLEMENTATION.md  Makefile  README.md  README.spiffs_imaging  TIPSnTRICKS.md  USAGE.md  Wish-porting-howto.md  conf.py  dev-wish-notes.rst  dev-wish-porting.rst  diagrams.rst  doxygen.rst  esp8266-stack.txt  example.js  index.rst  intro.rst  large-arrays-in-ROM.txt  remote-friend-request.md  repository.md  stable1-release-notes.md  wish-app-api.rst
doc/hardware/: ESP8266-CT-EVB.brd  ESP8266-CT-EVB.sch  README.md
mist/: mist_app.c  mist_app.h  mist_defs.h  mist_follow.c  mist_follow.h  mist_handler.c  mist_handler.h  mist_mapping.c  mist_mapping.h  mist_model.c  mist_model.h
mist/old/: mist_rpc_func.c__
port/: faux_service_ipc.c
port/android/: event.c  wish_port_config.h
port/esp8266/: espmissingincludes.h  faux_service_ipc.c  generate_ntc10_lookup.m  ntc10_lookup.h  spiffs_config.h  spiffs_integration.c  spiffs_integration.h  user_hw_config.h  user_main.c  user_relay.c  user_relay.h  user_support.c  user_support.h  user_task.c  user_tcp.c  user_tcp.h  user_tcp_client.h  user_tcp_server.h  user_udp.c  user_wifi.c  user_wifi.h  wish_port_config.h
port/esp8266/ld/: eagle.app.v6.ld
port/unix/: app.c  app_server.c  app_server.h  event.c  fs_port.c  fs_port.h  network.c  relay_client.c  service_ipc.c  test_bson.c  test_bson_update.c  wish_port_config.h
src/: core_service_ipc.h  mbedtls-wish-config.h  rb.c  rb.h  wish_acl.c  wish_acl.h  wish_api_connections.c  wish_api_connections.h  wish_api_identity.c  wish_api_identity.h  wish_api_relay.c  wish_api_relay.h  wish_api_services.c  wish_api_services.h  wish_api_wld.c  wish_api_wld.h  wish_app.h  wish_config.c  wish_config.h  wish_connection.c  wish_connection.h  wish_connection_mgr.c  wish_connection_mgr.h  wish_core.c  wish_core.h  wish_core_app_rpc.c  wish_core_app_rpc.h  wish_core_app_rpc_func.c  wish_core_rpc.c  wish_core_rpc.h  wish_core_rpc_func.c  wish_core_signals.c  wish_core_signals.h  wish_debug.c  wish_debug.h  wish_directory.c  wish_directory.h  wish_dispatcher.c  wish_dispatcher.h  wish_event.c  (+26 more)
tools/: debug-ia32-linux.sh  debug-x64-linux.sh  gulpfile.js  package.json  release-arm64-darwin.sh  release-ia32-linux.sh  release-source-apache2.sh  release-x64-linux.sh
utils/: import_hex.awk  prefix_hex_with_0x.awk
wish/: core_service_ipc.h  faux_service_ipc.c  rb.c  wish_acl.c  wish_acl.h  wish_config.c  wish_config.h  wish_connection_mgr.c  wish_connection_mgr.h  wish_core.c  wish_core.h  wish_core_app_rpc_func.c  wish_core_app_rpc_func.h  wish_core_rpc_func.c  wish_core_rpc_func.h  wish_core_signals.c  wish_core_signals.h  wish_debug.c  wish_debug.h  wish_directory.c  wish_directory.h  wish_dispatcher.c  wish_dispatcher.h  wish_event.c  wish_event.h  wish_identity.c  wish_identity.h  wish_io.c  wish_io.h  wish_ip_addr.h  wish_local_discovery.c  wish_local_discovery.h  wish_relationship.c  wish_relationship.h  wish_relay_client.c  wish_relay_client.h  wish_return.h  wish_service_registry.c  wish_service_registry.h  wish_time.c  (+4 more)
wish_app/: app_service_ipc.h  wish_acl.h  wish_app.c  wish_app.h  wish_protocol.h
wish_app_deps/: basedefs.h  rb.h  wish_core_client.c  wish_core_client.h  wish_debug.h  wish_fs.c  wish_fs.h  wish_platform.c  wish_platform_attributes.h  wish_port_config.h  wish_utils.c  wish_utils.h
wish_app_port_deps/unix/: fs_port.c
wish_rpc/: wish_rpc.c  wish_rpc.h
